--- a/md/SIBI/app/src/main/res/menu/bottom_menu.xml
+++ b/md/SIBI/app/src/main/res/menu/bottom_menu.xml
@@ -4,21 +4,21 @@
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_home"
-        android:title="Home"
+        android:title="@string/home"
         app:cnb_iconColor="@color/regular_blue" />
     <item
         android:id="@+id/nav_leaderboard"
         android:icon="@drawable/ic_leaderboard"
-        android:title="Leaderboard"
+        android:title="@string/leaderboard"
         app:cnb_iconColor="@color/regular_blue" />
     <item
         android:id="@+id/nav_contribute"
         android:icon="@drawable/ic_contribution"
-        android:title="Contribution"
+        android:title="@string/contribution"
         app:cnb_iconColor="@color/regular_blue" />
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/ic_profile"
-        android:title="Profile"
+        android:title="@string/profile"
         app:cnb_iconColor="@color/regular_blue" />
 </menu>
