--- a/md/SIBI/app/src/main/res/layout/activity_detail_learn.xml
+++ b/md/SIBI/app/src/main/res/layout/activity_detail_learn.xml
@@ -32,7 +32,8 @@
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:layout_marginTop="24dp"
-            android:src="@drawable/alphabet_a" />
+            android:src="@drawable/alphabet_a"
+            android:contentDescription="@string/content_description" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -45,7 +46,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Gerakan"
+                android:text="@string/gerakan"
                 android:textStyle="bold"
                 android:textColor="@color/dark_blue"
                 android:textSize="20sp"
