--- a/md/SIBI/app/src/main/res/layout/activity_game_result.xml
+++ b/md/SIBI/app/src/main/res/layout/activity_game_result.xml
@@ -2,7 +2,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.maingame.game.GameResultActivity">
 
@@ -25,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Selamat!"
+            android:text="@string/selamat"
             android:textStyle="bold"
             android:textColor="@color/dark_blue"
             android:textSize="24sp"/>
@@ -36,7 +35,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
             android:gravity="center"
-            android:text="Anda telah menyelesaikan permainan dengan baik."
+            android:text="@string/anda_telah_menyelesaikan_permainan_dengan_baik"
             android:textColor="@color/dark_blue"
             android:textSize="16sp"/>
 
@@ -51,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="Score yang kamu dapatkan sebesar"
+                android:text="@string/poin_yang_kamu_berhasil_dapatkan_adalah"
                 android:textColor="@color/dark_blue"
                 android:textSize="16sp"/>
 
@@ -60,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="100"
+                tools:text="100"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/orange"
                 android:textSize="40sp"/>
@@ -69,7 +68,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="Poin"
+                android:text="@string/poin"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/dark_blue"
                 android:textSize="16sp"/>
@@ -86,20 +85,6 @@
             android:indeterminateTint="@color/regular_blue"
             android:visibility="visible" />
 
-        <Button
-            android:id="@+id/btn_check_leaderboard"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:background="@drawable/fill_round_orange"
-            android:padding="4dp"
-            android:text="Leaderboard"
-            android:textAllCaps="false"
-            android:textColor="#FFF"
-            android:textSize="16sp"
-            android:textStyle="bold"/>
 
         <Button
             android:id="@+id/btn_back_home"
@@ -110,7 +95,7 @@
             android:paddingEnd="16dp"
             android:background="@drawable/fill_round_button"
             android:padding="4dp"
-            android:text="Back to home"
+            android:text="@string/back_to_home"
             android:textAllCaps="false"
             android:textColor="#FFF"
             android:textSize="16sp"
