--- a/md/SIBI/app/src/main/res/layout/fragment_globalrank.xml
+++ b/md/SIBI/app/src/main/res/layout/fragment_globalrank.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Global Ranking"
+        android:text="@string/global_ranking"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@color/dark_blue"
