--- a/md/SIBI/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/md/SIBI/app/src/main/res/layout/fragment_leaderboard.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -22,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
-            android:text="Leaderboard"
+            android:text="@string/leaderboard"
             android:textStyle="bold"
             android:textColor="@color/dark_blue"
             android:textSize="24sp"/>
@@ -32,7 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
-            android:background="@drawable/main_info_graphic">
+            android:background="@drawable/main_info_graphic"
+            android:baselineAligned="false">
             <RelativeLayout
                 android:layout_weight="1"
                 android:layout_height="120dp"
@@ -44,22 +46,24 @@
                     android:layout_height="36dp"
                     android:layout_marginStart="8dp"
                     android:src="@drawable/ic_myrecord"
-                    android:layout_alignParentStart="true" />
+                    android:layout_alignParentStart="true"
+                    android:contentDescription="@string/content_description" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
-                    android:text="1800"
+                    android:text="@string/_1800"
                     android:textSize="24sp"
                     android:textColor="@color/dark_blue"
                     android:textStyle="bold"
-                    android:layout_alignParentEnd="true" />
+                    android:layout_alignParentEnd="true"
+                    tools:ignore="RelativeOverlap" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Rekor Tertinggimu"
+                    android:text="@string/rekor_tertinggimu"
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
                     android:textSize="16sp"
@@ -78,22 +82,24 @@
                     android:layout_height="36dp"
                     android:layout_marginStart="8dp"
                     android:src="@drawable/ic_globalrank"
-                    android:layout_alignParentStart="true" />
+                    android:layout_alignParentStart="true"
+                    android:contentDescription="@string/content_description" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="107"
+                    android:text="@string/_107"
                     android:layout_marginEnd="8dp"
                     android:textSize="24sp"
                     android:textColor="@color/dark_blue"
                     android:textStyle="bold"
-                    android:layout_alignParentEnd="true" />
+                    android:layout_alignParentEnd="true"
+                    tools:ignore="RelativeOverlap" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Peringkat Global"
+                    android:text="@string/peringkat_global"
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
                     android:textSize="16sp"
