--- a/md/SIBI/app/src/main/res/layout/fragment_myrecord.xml
+++ b/md/SIBI/app/src/main/res/layout/fragment_myrecord.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Record Saya"
+        android:text="@string/record_saya"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@color/dark_blue"
