--- a/md/SIBI/app/src/main/res/layout/item_my_record.xml
+++ b/md/SIBI/app/src/main/res/layout/item_my_record.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/main_content"
@@ -10,15 +11,16 @@
     android:layout_marginBottom="12dp">
 
     <TextView
-        android:id="@+id/timestamp"
+        android:id="@+id/type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerInParent="true"
-        android:text="Judul Record"
+        android:text="@string/judul_record"
         android:textColor="@color/dark_blue"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:ignore="RelativeOverlap" />
 
     <TextView
         android:id="@+id/score"
@@ -31,7 +33,8 @@
         android:layout_centerInParent="true"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:text="1800"/>
+        tools:text="1800"
+        tools:ignore="RelativeOverlap" />
 
 
 </RelativeLayout>
