--- a/md/SIBI/app/src/main/res/layout/activity_contribute_result.xml
+++ b/md/SIBI/app/src/main/res/layout/activity_contribute_result.xml
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                tools:text="100"
+                android:text="@string/_100"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/orange"
                 android:textSize="40sp"/>
